no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
@@ -5,6 +5,16 @@
 
 
 
+VERSION ==>                       #8.3.0
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            CONFIG             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
 CONF                              #Can be:
                                   #  - --conf-var-name (CLI)
                                   #  - CONF.varName (register())
@@ -34,22 +44,39 @@ TCONF                             #TypeScript configuration.
 -O|--compiler-options             #TCONF.compilerOptions
 --pretty                          #Like tsc
 
--r ts-node/register               #Do tsc runtime (instead of compile-time) on require() (using require.extensions['EXT'])
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:           REGISTER            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+-r ts-node/register               #Do tsc runtime (instead of compile-time)
+                                  #Do it by patching require() (using require.extensions['EXT'])
+                                  #For extensions '.ts' and (depending on TCONF.allowJs|jsx) '.js[x]|.tsx'
                                   #Transpilation and type checking are cached, using file path as key.
--r ts-node/register/transpile-only#Same but with --transpile-only
 -r ts-node/register/type-check    #Same but with --type-check
+-r ts-node/register/transpile-only#Same but with --transpile-only
 
 --type-check                      #BOOL (def: true). Do type check.
 -T|--transpile-only               #BOOL (def: false). Do not type check.
 -D|--ignore-diagnostics           #'NUM'|NUM_ARR: ignore type checking errors with those codes
 --log-error                       #BOOL (def: false). `console.error()` on type checking error (instead of throwing)
 
+--prefer-ts-exts                  #BOOL (def: false). If importing with '.EXT', prefer '.ts' over '.js'
 -I|--ignore                       #'REGEXP'_ARR (def: ['node_modules']). Ignore matching files
 --skip-ignore                     #BOOL (def: false). Do not use --ignore
 
 -C|--compiler                     #Underlying 'MODULE' (def: 'typescript')
-CONF.readFile('PATH')[->STR]
-CONF.fileExists('PATH')->BOOL     #Customize underlying FS.* calls
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              CLI              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
 
 ts-node                           #Like node but using -r ts-node/register
                                   #Works as REPL too (using 'repl' core module)
@@ -58,23 +85,31 @@ ts-node                           #Like node but using -r ts-node/register
 -p|--print
 -r|--require                      #Same as node flags
 
-register([CONF])->REGISTER        #Same as -r but programatically
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:         PROGRAMMATIC          :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+register([CONF])->REGISTER        #Same as -r ts--node/register but programatically
 
 REGISTER.compile
  ('TYPESCRIPT', 'FILENAME'[, NUM])#Manually transpile and type check a STR
  ->'JAVASCRIPT'                   #NUM is line offset
 
-REGISTER.getTypeInfo              #Retrieve metadata about a VAR inside 'TYPESCRIPT'
+REGISTER.getTypeInfo              #Retrieve TYPE of a VAR inside 'TYPESCRIPT'
  ('TYPESCRIPT', 'FILENAME', NUM)  #NUM is byte offset
  ->OBJ                            #OBJ:
-                                  #  - name 'VAR'
+                                  #  - name 'TYPE'
                                   #  - comment STR (like autocomplete popup in VSCode)
                                   #Requires --type-check
 
 REGISTER.ts.*                     #Forwards to TYPESCRIPT.*
-CONF.transformers                 #Custom TYPESCRIPT transformers
 REGISTER.cwd                      #process.cwd()
-
-EXTENSIONS ==>                    #For extensions '.ts' and (depending on TCONF.allowJs|jsx) '.js[x]|.tsx'
 REGISTER.extensions               #'EXT'_ARR
---prefer-ts-exts                  #BOOL (def: false). If importing with '.EXT', prefer '.ts' over '.js'
+
+CONF.transformers                 #Custom TYPESCRIPT transformers
+CONF.readFile('PATH')[->STR]
+CONF.fileExists('PATH')->BOOL     #Customize underlying FS.* calls
