--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/jsx_ast.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/jsx_ast.format.txt
@@ -1,6 +1,40 @@
 
-             
-   JSX_AST   
-             
+           
+   JSX_AST  
+           
 
+
+AST TREE ==>                      #Supported by: esprima, acorn, espree, @babel/parser, flow, typescript, typescript-estree
+
+<ELEM>...</ELEM>                  #Child of EXPR, type 'JSXElement':
+                                  #  - openingElement JSX_OPENING_ELEM
+                                  #  - [closingElement JSX_CLOSING_ELEM] (none if selfClosing)
+                                  #  - children ARR of JSX_ELEM|JSX_TEXT|JSX_EXPR_CONTAINER|JSX_SPREAD_CHILD
+<ELEM>                            #Type 'JSXOpeningElement':
+                                  #  - name JSX_IDENTIFIER|JSX_MEMBER_EXPR|JSX_NAMESPACED_NAME
+                                  #  - selfClosing BOOL: if <ELEM/>
+                                  #  - attributes ARR of JSX_ATTRIBUTE|JSX_SPREAD_ATTRIBUTE
+</ELEM>                           #Type 'JSXClosingElement':
+                                  #  - name JSX_IDENTIFIER|JSX_MEMBER_EXPR|JSX_NAMESPACED_NAME
+
+ELEM|ATTR                         #Child of IDENTIFIER, type 'JSXIdentifier'
+ELEM.ELEM2                        #Child of EXPR, type 'JSXMemberExpression':
+                                  #  - object JSX_IDENTIFIER|JSX_MEMBER_EXPR (all parts but last)
+                                  #  - property JSX_IDENTIFIER (last part)
+NS:ELEM|ATTR                      #Child of EXPR, type 'JSXNamespacedName':
+                                  #  - name JSX_IDENTIFIER
+                                  #  - namespace JSX_IDENTIFIER
+
+ATTR[="VAL"]                      #Type 'JSXAttribute':
+                                  #  - name JSX_IDENTIFIER|JSX_NAMESPACED_NAME
+                                  #  - [value LITERAL|JSX_EXPR_CONTAINER|JSX_ELEM]
+{...ATTR_OBJ}                     #Child of SPREAD_ELEM, type 'JSXSpreadAttribute'
+
+{VAL}                             #Type 'JSXExpressionContainer':
+                                  #  - expression EXPR or JSX_EMPTY_EXPR (type 'JSXEmptyExpression')
+{...CHILD}                        #Type 'JSXSpreadChild'
+
+TEXT                              #Type 'JSXText':
+                                  #  - value STR
+                                  #  - raw STR
 
