no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #3.5.3
+VERSION ==>                       #3.6.0-beta
 
 
                                              /=+===============================+=\
@@ -599,11 +599,12 @@ Promise<T>                        #PROMISE either:
 [Readonly][Weak]Set<VALUE_TYPE>   #
 Proxy                             #
 
-[Async]Iterator<T>                #ITERATOR doing next|return(T) and throw(ERROR)
+[Async]Iterator<T, U, V>          #ITERATOR doing next(V)->T (def: next()->unknown) and return()->U (def: any)
 [Async]Iterable<T>                #ITERABLE
 [Async]IterableIterator<T>        #ITERABLETOR
-GeneratorFunction                 #function*(){}
-Generator                         #ITERABLE returned by (function*(){})
+[Async]GeneratorFunction          #function*(){}
+[Async]Generator<T, U, V>         #ITERABLE returned by (function*(){})
+                                  #Doing T = yield V (def: any = yield unknown) and return V (def: unknown)
 
 ArrayBuffer[View]|DataView        #
 Uint8ClampedArray                 #
