no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -449,8 +449,9 @@ class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclar
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
 new.target                        #Child of EXPR, type 'MetaProperty':
-import.meta                       #  - meta IDENTIFIER
+                                  #  - meta IDENTIFIER
                                   #  - property IDENTIFIER
+import.meta                    sem#Same
 
 this                              #Child of EXPR, type 'ThisExpression'
 
