no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -148,7 +148,7 @@ ASYNCRESOURCE.emitDestroy()                     #
 ASYNCRESOURCE.asyncId()->TASK_ID                #
 ASYNCRESOURCE.triggerId()->PARENT_TASK_ID       #
 
-node --no-force-async-hooks-checks              #Do not do extra runtime checks related to async hooks
+--no-force-async-hooks-checks                   #Do not do extra runtime checks related to async hooks
 
 
                                              /=+===============================+=\
@@ -158,21 +158,19 @@ node --no-force-async-hooks-checks              #Do not do extra runtime checks 
                                              \=+===============================+=/
 
 
-node --inspect[-brk][=[HOST:]PORT] ...          #Launches node ... but with debugger server
-                                                #Must then:
+--inspect[-brk][=[HOST:]PORT] ...               #Launches node ... but with debugger server.
+                                                #Must connect to it with a debugger client:
                                                 #  - go to chrome://inspect and click on a link to open devtools
                                                 #  - or directly click on the Node symbol in devtools
                                                 #Also forwards console messages
                                                 #If -brk, will put breakpoint at first line
-                                                #Unless -brk, breakpoints are ignored until a client is connected
+                                                #  - unless -brk, breakpoints are ignored until a client is connected
                                                 #HOST: def 127.0.0.1
                                                 #PORT: def 9229, 0 for "any available"
-                                                #Difference with node --debug:
-                                                #  - only for Chrome devtools as client
-                                                #  - but optimized for it, with more features (ES6, async stack, profiling, source
-                                                #    maps, workspaces, blackboxing, etc.)
-                                                #Note that child processes must be started with node --inspect as well
-                                                #Prefered way to debug
+                                                #Child processes must be started with node --inspect as well
+--inspect-publish-uid=STR,...                   #How the debugging information is communicated among:
+                                                #  - 'http' (def): endpoint at HOST:PORT/json/list
+                                                #  - 'stderr' (def)
 
 IRON-NODE ==>                                  ##Another way to debug is to use Electron.
 JAM3 DEVTOOL ==>                               ##Those two apps do this
@@ -322,8 +320,8 @@ MODULE ==>                                      #Can be:
 module                                          #Current MODULE, i.e. file being loaded.
                                                 #There are builtin modules, which are the chapters of this doc.
 
-node -r STR                                     #Load file STR:
-node --require STR                              #  - 'ID': core module
+-r STR                                          #Load file STR:
+--require STR                                   #  - 'ID': core module
 require(STR)                                    #  - 'FILE' (absolute or relative)
                                                 #  - 'DIR' (absolute or relative):
                                                 #     - DIR/package.json, using main 'PATH' (relative to DIR)
@@ -470,7 +468,7 @@ NODE-ONLY RESOLVER LOGIC ==>                    #Browsers cannot:
                                                 #  - require node_modules / packages
                                                 #However some of this is usually done through a dependency bundler.
 
-node --loader FILE                              #Customize the behavior of "import"
+--loader FILE                                   #Customize the behavior of "import"
                                                 #FILE must be ESM, and export:
                                                 #  - resolve('PATH', 'URL', import())->{ url, format }:
                                                 #     - customize resolution
@@ -896,7 +894,7 @@ REPLSERVER.setupHistory                      11*#Use a history file.
  ('PATH', FUNC(ERROR, REPLSERVER))           11*#Automatically done in normal CLI
 
 
-node --experimental-repl-await               10*#Allow using await top-level
+--experimental-repl-await                    10*#Allow using await top-level
 
 
                                              /=+===============================+=\
@@ -1258,7 +1256,7 @@ TLSSOCKER.on('keylog', FUNC(BUFFER))         12*#Can be emitted multiple times: 
                                              \=+===============================+=/
 
 
-node --http-parser=legacy|llhttp             11*#Low-level HTTP parsing library:
+--http-parser=legacy|llhttp                  11*#Low-level HTTP parsing library:
                                              11*#  - legacy
                                              11*#  - llhttp: faster
                                             <12*#Def: legacy
@@ -1288,7 +1286,7 @@ HTTPSERVER.on("clientError",FUNC(ERR,TCPSOCKET))#Fired on connection problem.
 
 HTTPSERVER.maxHeadersCount                      #Maximum number of headers incoming (def: 1000, 0 for unlim)
 HTTPSERVER.maxHeaderSize
-node --max-http-header-size NUM               8*#Def: 8KB. If above, fires 'clientError'.
+--max-http-header-size NUM                    8*#Def: 8KB. If above, fires 'clientError'.
                                              12*#If no 'clientError' handler, returns 431.
 
 RES|CLIENTREQ.setTimeout(UINT[, FUNC()])        #Call underlying TCPSOCKET.*
@@ -1699,7 +1697,7 @@ toNamespacedPath('PATH')->'PATH'              9*#Returns namespaced path '\\?\LE
                                              \=+===============================+=/
 
 
-node --trace-sync-io                            #console.trace() when sync I/O is used
+--trace-sync-io                                 #console.trace() when sync I/O is used
 
 CROSS-OS PERMISSIONS ==>                        #Windows permissions are not supported
                                                 #  - except for `readonly` file attribute on regular files, which maps to `a+w`
@@ -2066,10 +2064,10 @@ WARNINGS ==>                                    #Are similar to console.warn() e
                                                 #  - should try to emit only once
                                                 #By def, printed to console with console.warn()
 
-node --no-warnings
+--no-warnings
 NODE_NO_WARNINGS=1 ENVVAR                       #Does not print to console
-node --trace-warnings                           #Use console.trace() instead of console.warn()
-node --redirect-warnings=FILE
+--trace-warnings                                #Use console.trace() instead of console.warn()
+--redirect-warnings=FILE
 NODE_REDIRECT_WARNINGS=FILE ENVVAR              #I.e. will not be printed to console
 
 PROCESS.emitWarning(ERROR)
@@ -2087,10 +2085,10 @@ DEPRECATION ==>                                 #Type of warning with TYPE "Depr
 
 UTIL.deprecate(FUNC, 'MESSAGE'[, 'ID'])->FUNC   #Make FUNC fire PROCESS.emitWarning('MESSAGE', 'DeprecationWarning', 'ID')
 
-node --no-deprecation
-node --trace-deprecation                        #Like --no|trace-warnings but for deprecations
-node --throw-deprecation                        #throw error on deprecation
-node --pending-deprecation
+--no-deprecation
+--trace-deprecation                             #Like --no|trace-warnings but for deprecations
+--throw-deprecation                             #throw error on deprecation
+--pending-deprecation
 NODE_PENDING_DEPRECATION=1 ENVVAR               #Includes upcoming deprecations
 
 
@@ -2127,7 +2125,7 @@ setUnaughtExceptionCaptureCallback            9*#Same as on("uncaughtException")
  (FUNC(ERROR)|null)                           9*#  - unsets "uncaughtException" handler
                                               9*#  - unsets --abort-on-uncaught-exception
 hasUnaughtExceptionCaptureCallback()->BOOL    9*#
-node --abort-on-uncaught-exception              #Create a dump file when process exited because of uncaught exception
+--abort-on-uncaught-exception                   #Create a dump file when process exited because of uncaught exception
 
 exit([UINT])                                    #Exit with exit code UINT (def: 0)
                                                 #Pending microtasks|macrotasks will be aborted. Streams won't be flushed.
@@ -2182,7 +2180,7 @@ execPath                                        #Absolute path of node executabl
 env                                             #Environment variables, as OBJ. Values are strings.
                                                 #Case-insensitive on Windows.
 title                                           #Process title displayed in ps. Read/write. Usually short max length.
-node --title STR                             10*#Set PROCESS.title
+--title STR                                  10*#Set PROCESS.title
 
 cwd()->'DIR'                                    #Current directory
                                                 #Is the one of the main file. Required files do not change it.
@@ -2433,7 +2431,7 @@ WORKER.on("error", FUNC(ERROR))                 #
 
 ISOMORPHISM ==>                              10*#Inspired by DOM workers but with notable differences
 
-node --experimental-worker                   10*#Must be used
+--experimental-worker                        10*#Must be used
                                              11*#Must not be used
 
 MULTI-THREADING ==>                          10*#Uses threads not processes, i.e.:
@@ -2474,9 +2472,9 @@ WORKER_THREADS|WORKER.threadId               10*#NUM
 
 WORKER.on('online', FUNC())                  10*#When worker is loaded, just before it starts executing
 
-WORKER.terminate([FUNC(ERROR, EXIT_CODE)])   10*#Worker current microtask will be interrupted
-                                             10*#I.e. should not be done when WORKER might be in the middle of executing a Node.js core function
+WORKER.terminate()->PROMISE_EXIT_CODE        10*#Worker current microtask will be interrupted
                                              10*#EXIT_CODE will be 1
+                                             12*#Async and return a PROMISE
 
 WORKER.on('exit', FUNC(EXIT_CODE))           10*#When worker ends (including because of uncaught exceptions)
 
@@ -2627,7 +2625,7 @@ VMMODULE.dependencySpecifiers                 9*#All 'MODULE'_ARR imported by th
 setEngine(PATH[, NUM])                          #When using custom OpenSSL or alternative crypto library.
                                                 #NUM are or'd flags: ENGINE_METHOD_ALL|RSA|DSA|DH|RAND|ECDH|ECDSA|CIPHERS|
                                                 #DIGESTS|STORE|PKEY_[ASN1_]METH|NONE
-node --openssl-config=FILE
+--openssl-config=FILE
 OPENSSL_CONF=FILE ENVVAR                        #
 
 createHash(STR)                                 #Returns a HASH, i.e. a IOSTREAM generator: write|read to it to get hashes.
@@ -2802,7 +2800,9 @@ ASSERT.*(..., 'MESSAGE'|ERROR)                  #Can be always passed as last ar
 ASSERTIONERROR.actual|expected                  #VAL
                                                 #With *equal|ok|ifError()
                                                 #Does a colored diff
-ASSERTIONERROR.operator                         #'==' (equal|ok()) or '!=' (notEqual()), 'fail' (fail()), 'FUNC' (others)
+                                                #Only actual with *throws|*rejects()
+ASSERTIONERROR.operator                         #'==' (equal|ok()) or '!=' (notEqual()), 'fail' (fail()),
+                                                #'throw|doesNotThrow|reject|doesNotReject', 'FUNC' (others)
 
 ASSERT.strict.*(...)                          8*#Same as ASSERT.*(...) except:
                                               8*#  - use == instead of ===
@@ -3104,6 +3104,7 @@ process.report.getReport([ERROR])->'JSON'    11*#Get debugging information.
                                              11*#     - platform: process.platform
                                              11*#     - release: process.release
                                              11*#     - host: os.hostname()
+                                             11*#     - cpus: os.cpus()
                                              11*#     - cwd process.cwd()
                                              11*#     - osName STR (e.g. 'Linux')
                                              11*#     - osRelease STR (e.g. '4.18.0-16-generic')
