no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -6,25 +6,14 @@
 
 
 See:
-  - https://github.com/Microsoft/TypeScript/wiki
-     - including tsserver
-  - tsserver: https://github.com/microsoft/TypeScript/wiki/Standalone-Server-(tsserver)
-  - programmatic:
-     - https://github.com/microsoft/TypeScript/wiki/Using-the-Compiler-API
-     - https://github.com/microsoft/TypeScript/wiki/FAQs-for-API-Consumers
-     - https://github.com/microsoft/TypeScript/wiki/API-Breaking-Changes
-  - language services:
-     - https://github.com/microsoft/TypeScript/wiki/Writing-a-Language-Service-Plugin
-     - https://github.com/microsoft/TypeScript/wiki/Using-the-Language-Service-API
-     - https://github.com/microsoft/TypeScript/wiki/JavaScript-Language-Service-in-Visual-Studio
-     - https://github.com/microsoft/TypeScript/wiki/Debugging-Language-Service-in-VS-Code
   - updates:
      - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript
      - https://github.com/microsoft/TypeScript/wiki/Breaking-Changes
      - https://devblogs.microsoft.com/typescript/
-  - https://github.com/microsoft/TypeScript/blob/master/doc/spec.md
   - source like https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts
+  - https://github.com/microsoft/TypeScript/blob/master/doc/spec.md
   - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
+  - reorganize this doc, adding chapters
   - check VSCode options
   - to_learn.txt
   - GitHub search
@@ -70,7 +59,7 @@ CONF.include|exclude              #Input FILEs but as 'GLOB'_ARR
 
 --noEmit                          #Do not transpile (only type check).
 --noEmitOnErrors                  #Do not transpile if type checks failed
---removeComments                  #Remove comments (during transpile) unless start with /*!
+--removeComments                  #Remove comments (during transpile) unless start with /*! and is on first line.
 
 --watch|w                         #Watch mode
 --preserveWatchOutput             #Do not clear screen between runs with --watch
@@ -143,6 +132,19 @@ CONF.references                   #Sub-CONFs:
                                   #  - cache size
                                   #  - time used for program|transform|comment|print
 --disableSizeLimit                #Do not crash when total non-*.ts[x] files size >= 20MB
+
+tsserver                          #Like tsc but using a server/client architecture.
+                                  #Commands are as JSON on stdin, and result is on stdout.
+                                  #Not documented yet (do it when I need to)
+
+LANGUAGE SERVICE PLUGINS ==>      #Programmatic API for changing behavior of TypeScript inside IDE / code editors.
+                                  #Features: inline linting, autocompletion, "go to symbol"
+                                  #Not documented yet (do it when I need to)
+--plugins OBJ                     #Enable a language service plugin
+                                  #OBJ: name STR, then custom config properties
+
+PROGRAMMATIC USAGE ==>            #Not documented yet (do it when I need to).
+                                  #Should then check TypeScript GitHub wiki: Using-the-Compiler-API, FAQs-for-API-Consumers API-Breaking-Changes
 
 STRUCTURAL TYPING ==>             #Not nominative, i.e. TYPE is the structure not the name (including for CLASS|INTERFACE).
                                   #Exception: CLASS private|protected fields.
@@ -288,8 +290,6 @@ object                            #OBJ
                                   #Defaults to untyped (any)
 --suppressImplicitAnyIndexErrors  #Do not make --noImplicitAny fail when OBJ[NUM|STR] use default untyped (any).
 
-OBJ[NUM|STR]                      #Using OBJ[NUM|STR] is
-
 Partial<OBJ_TYPE>                 #Adds ? on all properties
 Required<OBJ_TYPE>                #Removes ? on all properties
 Pick<OBJ_TYPE, KUTYPE>            #Only keep KUTYPE properties
@@ -398,7 +398,6 @@ ReadonlyArray<TYPE>               #Same for all ARR members.
 class ...
   { readonly ...: TYPE,... }      #Like OBJ. Exception: field is mutable in constructor()
 
-
 TYPE | TYPE2                      #Union ("or")
 TYPE & TYPE2
 Extract<TYPE, TYPE2>              #Intersection ("and")
@@ -451,6 +450,11 @@ class ... { VAR!: TYPE; ... }     #Useful when VAR is initialized but it cannot 
 --strictPropertyInitialization    #Do not allow class properties:
                                   #  - whose TYPE does not include undefined
                                   #  - and who is not initialized (including in constructor)
+
+<const>VAL
+VAL as const                      #
+                                  #Type assertion adding Readonly<typeof VAL>
+                                  #VAL must be a literal STR|NUM|BOOL|ARR|OBJ
 
 TRANSTYPING RULES ==>             #For TYPE2 <-- TYPE, TYPE2 must be contravariant to TYPE.
                                   #For FUNCs:
