no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1630,7 +1630,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.18.0)
+import/*                         ##Node module "eslint-plugin-import" (2.18.1)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1684,7 +1684,7 @@ import/no-unused-modules [OBJ]   ##Avoid exports that are not imported anywhere 
                                  ##Also report modules with no exports (if OBJ.missingExports true)
                                  ##OBJ:
                                  ##  - src 'PATH'_ARR (def: process.cwd()): to include
-                                 ##  - ignoreExports 'PATH'_ARR: to exclude (e.g. module entry point)
+                                 ##  - ignoreExports 'PATH'_ARR: to exclude (always excluded: PACKAGE.main|browser|bin)
 import/named                     ##Avoid import { VAR } from 'PATH', if PATH does not export VAR
 import/default                   ##Avoid import VAR from 'PATH', if PATH does not export default VAR
 import/namespace [OBJ]           ##Avoid import * as OBJ2 from 'PATH', then using OBJ2.VAR, if PATH does not export VAR
