no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -903,7 +903,7 @@ TEST ? VAL1 : VAL2                              #Returns VAL1 or VAL2
 
 VAL && VAL2                                     #Same as VAL ? VAL : VAL2
 VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
-VAL ?? VAL2                                   *~#Same as VAL == null ? VAL : VAL2
+VAL ?? VAL2                                 *-|~#Same as VAL == null ? VAL : VAL2
 
 VAL1, VAL2                                      #Evaluates both, but returns VAL2.
                                                 #Use case: in for or while loops.
@@ -1399,9 +1399,10 @@ REGEXP.flags                                  -|#'FLAGS' (read-only)
 
 REGEXP.exec(STR)                                #Search REGEXP in STR and returns ARR (or null):
                                                 #  - ARR[0]: whole match
-                                                #  - ARR[n]: parenthesis matches
+                                                #  - ARR[NUM]: parenthesis matches
                                                 #  - ARR.index: first match index
                                                 #  - ARR.input: STR
+                                            *-|~#  - ARR.indices
 REGEXP.test(STR)                                #Returns BOOL
 
 
