no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -487,6 +487,12 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * from "MDL"               #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
 
+export * as VAR from "MDL"   (am)=#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                             (am)=#  - no local
+                              (m)##  - exported -> specifier
+export VAL from "MDL"            =#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
+                                 =#  - no local
+
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
                                   #  - specifiers MODULE_SPECIFIER_ARR
                                   #  - source LITERAL ("MDL")
