no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
@@ -33,8 +33,8 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #     - based on cherow
                                   #     - TypeScript focused
                                   #     - project too young at the moment
-                                  #  - cherow:
-                                  #     - not maintained
+                                  #  - cherow: not maintained
+                                  #  - esprit: not maintained
 
 VERSION ==>                       #6.2.0
                                   #Browser, Node.js or CLI
