no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -211,6 +211,9 @@ ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
 ACORN-IMPORT-META                ##PLUGIN for import.meta
                                  ##Version 1.0.0
 
+ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
+                                 ##Version 0.3.0
+
 ACORN-ES7(ACORN)                 ##Patches ACORN so it can process decorators, according to ESTree
                                  ##PLUGIN name: 'es7'
                                  ##New token types: at
