no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.0.0
+VERSION ==>                       #6.0.1
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1629,11 +1629,11 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.17.3)
+import/*                         ##Node module "eslint-plugin-import" (2.18.0)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
-                                 ##  - import/extensions '.EXT'_ARR (def: ['.js', '.jsx']): after resolvers have been applied
+                                 ##  - import/extensions '.EXT'_ARR (def: ['.d.ts', '.ts', '.tsx', '.js', '.jsx']): after resolvers have been applied
                                  ##  - import/ignore 'REGEXP'_ARR: ignore those files
                                  ##  - import/core-modules 'MDL'_ARR:
                                  ##     - ignore those 'MDL'
@@ -1783,6 +1783,7 @@ import/order [OBJ]               ##Must order import|require
                                  ##     - 'sibling': './...'
                                  ##     - 'index': './'
                                  ##     - 'internal': 'DIR/...'
+                                 ##     - 'unkown': anything else that might happen when using loaders, e.g. '!...'
                                  ##  - newlines-between STR: newlines between import|require, among 'always' (between groups),
                                  ##    'always-and-inside-groups' (between any import|require), 'never', 'ignore' (def)
 import/newline-after-import [OBJ]##Must have OBJ.count NUM (def: 1) newlines after last import|require
