--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -211,8 +211,6 @@ ACORN-IMPORT-META                ##PLUGIN for import.meta
 ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
                                  ##Version 0.3.0
 
-ACORN-JSX/inject(ACORN)          ##Patches ACORN so it can process JSX (see JSX doc for AST format)
-                                 ##PLUGIN name: 'jsx'
+ACORN-JSX                        ##PLUGIN for JSX (see JSX doc for AST format)
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
-                                 ##Does not support: JSXSpreadChild
                                  ##Version 5.0.1
