no commit message

--- a/Languages/Static_analysis/Type_checking/flow.language.txt
+++ b/Languages/Static_analysis/Type_checking/flow.language.txt
@@ -4,6 +4,9 @@
         
 
 
+
+ALTERNATIVES ==>                  #See TypeScript
+
 VERSION ==>                       #0.14.0
 
 
