--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -5,6 +5,9 @@
 
 
 
+ALTERNATIVES ==>                  #  - typescript (preferred)
+                                  #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
+
 VERSION ==>                       #3.5.2
 
 
